--- a/.xserverrc
+++ b/.xserverrc
@@ -1,15 +1,15 @@
 #!/bin/sh
 
 exec /usr/bin/X \
-    :0 \
-    -deferglyphs 16 \
-    -depth 24 \
-    -keeptty \
-    -logfile /dev/stderr \
-    -nolisten tcp \
-    -novtswitch \
-    -render color \
-    vt${XDG_VTNR:?} \
-    "$@";
+	:0 \
+	-deferglyphs 16 \
+	-depth 24 \
+	-keeptty \
+	-logfile /dev/stderr \
+	-nolisten tcp \
+	-novtswitch \
+	-render color \
+	"vt${XDG_VTNR:?}" \
+	"$@";
 
 # vim: set ft=sh :
